# search-engine

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  deploy_all_dev.sh  deploy_all_prod.sh  docker-compose.dev.yml  docker-compose.yml  nginx.conf  nginx_crawler.conf  nginx_webserver.conf  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crawling/crawling/: api.py  crawl.py  pipelines.py  settings.py  tasks.py
crawling/crawling/spiders/: bbc.py  dota_api.py  dota_buff.py  reddit.py  wikipedia.py
docker/dev/crawling/: Dockerfile  deploy.sh
docker/dev/indexer/: Dockerfile  deploy.sh
docker/dev/webserver/: Dockerfile  deploy.sh  entrypoint.sh  pyproject.toml
docker/dev/webserver/webserver/search/: manage.py
docker/dev/webserver/webserver/search/common_utils/: elastic_agent.py  jwt_utils.py
docker/dev/webserver/webserver/search/menu/: urls.py
docker/dev/webserver/webserver/search/menu/static/menu/css/: menu.css
docker/dev/webserver/webserver/search/menu/static/menu/js/: menu.js
docker/dev/webserver/webserver/search/menu/templates/menu/: menu.html
docker/dev/webserver/webserver/search/search/: celery.py  health.py  urls.py
docker/dev/webserver/webserver/search/search/settings/: local.py
docker/dev/webserver/webserver/search/source_bbc/: source_info.py  urls.py  views.py
docker/dev/webserver/webserver/search/source_bbc/static/source_bbc/css/: bbc.css
docker/dev/webserver/webserver/search/source_bbc/static/source_bbc/js/: bbc.js
docker/dev/webserver/webserver/search/source_bbc/templates/source_bbc/: bbc_crawl.html
docker/dev/webserver/webserver/search/source_dota_buff/: source_info.py  urls.py
docker/dev/webserver/webserver/search/source_wikipedia/: apps.py  source_info.py
docker/dev/webserver/webserver/search/source_wikipedia/migrations/: 0001_initial.py  0002_crawljob_mongodb_db_indexjob.py
docker/dev/webserver/webserver/search/source_wikipedia/static/source_wikipedia/css/: wikipedia.css
docker/dev/webserver/webserver/search/source_wikipedia/static/source_wikipedia/js/: wikipedia.js
docker/dev/webserver/webserver/search/source_wikipedia/templates/source_wikipedia/: wikipedia_crawl.html  wikipedia_crawl_jobs.html
docker/dev/webserver/webserver/search/static/css/: base_search.css
docker/dev/webserver/webserver/search/static/js/: window_reload.js
docker/dev/webserver/webserver/search/templates/: base_search.html
docker/dev/webserver/webserver/search/user/templates/user/: login.html  profile.html
indexer/: api.py  mongo_to_elastic.py
k8s/minikube/: crawler-claim0-persistentvolumeclaim.yaml  crawler-deployment.yaml  crawler-service.yaml  db-deployment.yaml  elasticsearch-deployment.yaml  elasticsearch-service.yaml  flower-deployment.yaml  flower-service.yaml  indexer-deployment.yaml  indexer-service.yaml  kibana-deployment.yaml  kibana-service.yaml  mongo-express-deployment.yaml  mongo-express-service.yaml  mongodb-claim1-persistentvolumeclaim.yaml  mongodb-deployment.yaml  mongodb-service.yaml  nginx-crawler-claim0-persistentvolumeclaim.yaml  nginx-crawler-deployment.yaml  nginx-webserver-claim1-persistentvolumeclaim.yaml  nginx-webserver-conf.yaml  nginx-webserver-deployment.yaml  nginx_webserver-service.yaml  redis-deployment.yaml  redis-service.yaml  update_webserver.sh  webserver-claim0-persistentvolumeclaim.yaml  webserver-deployment.yaml  webserver-service.yaml  webserver-worker-claim1-persistentvolumeclaim.yaml  webserver-worker-deployment.yaml
webserver/search/: manage.py
webserver/search/common_tasks/: tasks.py
webserver/search/common_utils/: elastic_agent.py  jwt_middleware.py  jwt_utils.py  tasks.py
webserver/search/custom_data_source/: apps.py  source_info.py  urls.py  views.py
webserver/search/menu/: views.py
webserver/search/search/: asgi.py  celery.py  health.py  settings.py  urls.py  wsgi.py
webserver/search/source_bbc/: apps.py  forms.py  source_info.py  urls.py  views.py
webserver/search/source_dota_buff/: apps.py  views.py
webserver/search/source_wikipedia/: forms.py  models.py  source_info.py  tasks.py  urls.py  views.py
webserver/search/templates/: base.html  base_display.html  base_search.html
webserver/search/user/: models.py  urls.py  views.py
(+41 files in other folders)
