[tool.poetry]
name = "search-engine"
version = "1.0.0"
description = "Distributed search engine with multiple components"
authors = ["Elin Huliiev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
# Common libraries used everywhere
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"

# crawler-specific dependencies
[tool.poetry.group.crawler.dependencies]
scrapy = "^2.12.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
pymongo = "^4.12.0"
fastapi = "^0.103.0"
uvicorn = "^0.23.0"
celery = "^5.5.2"
redis = "^5.2.1"

# indexer-specific dependencies
[tool.poetry.group.indexer.dependencies]
pymongo = "^4.12.0"
sqlalchemy = "^2.0.0"
elasticsearch = "^8.0.0"
celery = "^5.5.2"
redis = "^5.2.1"
fastapi = "^0.103.0"
uvicorn = "^0.23.0"

# webserver-specific dependencies
[tool.poetry.group.webserver.dependencies]
fastapi = "^0.103.0"
uvicorn = "^0.23.0"
jinja2 = "^3.1.2"
Django = "^5.1.1"
elasticsearch = "^8.0.0"
colorlog = "^6.9.0"
celery = "^5.5.2"
docker = "^7.1.0"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"

# Development tools for local work
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"